#=============================================================================
# Subdirectory within root_out_dir for shared library files.
#=============================================================================
shlib_subdir = "."

#=============================================================================
# Root out dir for shared library files
#=============================================================================
root_shlib_dir = "{{root_out_dir}}"
if (shlib_subdir != ".") {
  root_shlib_dir += "/$shlib_subdir"
}

#=============================================================================
# Default extension for shared library files
#=============================================================================
shlib_extension = ".so"
